# butler

./: .coverage  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  logger.py  main.py  mypy.ini  playground.ipynb  pyproject.toml  pytest.ini  requirements.txt
.claude/: mcp.json
butler/: app.py  config.py  firebase.py  playground.ipynb  playground.py  pybutler-firebase-adminsdk-e88bw-363bb47622.json  strings.py  utils.py
butler/database/: api.py  config.py  database.py  properties.py  strings.py
tests/: test_database.py
