[tool.poetry]
name = "butler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
langchain = "^0.0.43"
flask = "^2.2.2"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
openai = "^0.25.0"
pre-commit = "^2.20.0"
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-bugbear = "^22.12.6"
ipykernel = "^6.19.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
