[tool.poetry]
name = "butler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
langchain = "^0.0.58"
flask = "^2.2.2"
gunicorn = "^20.1.0"
openai = "^0.25.0"
firebase-admin = "^6.0.1"
jsonschema = "^4.17.3"

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "*/tests/*", "*/__init__.py", "*/__main__.py"]
[tool.coverage.report]
fail_under = 100

[tool.poetry.group.dev.dependencies]
openai = "^0.25.0"
pre-commit = "^2.20.0"
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-bugbear = "^22.12.6"
ipykernel = "^6.19.4"
mypy = "^0.991"
pytest = "^7.2.1"
coverage = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


